@@ -108,6 +108,7 @@ public final class Constants {
     public static final String THEME = "app_theme";
     public static final String MODE = "mode";
     public static final String USE_SLIDING = "use_sliding_transition";
+    public static final String SCREEN_OFF_DELAY = "screen_off_delay";
 
     public static final String LAST_VERSION = "last_version";
     public static final String FEEDBACK_POP_UP_COUNT = "feedback_pop_up_count";
