@@ -253,6 +253,39 @@
         </LinearLayout>
 
         <LinearLayout
+          style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
+          android:paddingTop="12dp"
+          android:paddingBottom="0dp"
+          android:minHeight="56dp">
+
+          <ImageView
+            android:id="@+id/image_screen_off_delay"
+            style="@style/Widget.Doodle.ImageView.ListItem.Icon"
+            android:src="@drawable/ic_round_aod"
+            tools:ignore="ContentDescription" />
+
+          <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Title"
+              android:text="@string/other_screen_off_delay" />
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Description"
+              android:text="@string/other_screen_off_delay_description" />
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <com.google.android.material.slider.Slider
+          android:id="@+id/slider_screen_off_delay"
+          style="@style/Widget.Doodle.Slider"
+          android:valueFrom="0"
+          android:valueTo="1000"
+          android:stepSize="100" />
+
+        <LinearLayout
           android:id="@+id/linear_other_launcher"
           style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable.More">
 
