@@ -179,6 +179,8 @@
   <string name="other_gpu">Hardware acceleration</string>
   <string name="other_gpu_description">Turn off if the wallpaper crashes</string>
   <string name="other_gpu_info">Hardware acceleration is only available for Doodle starting with Android 8. The wallpaper animations might therefore be a bit jerky.</string>
+  <string name="other_screen_off_delay">Screen-off delay</string>
+  <string name="other_screen_off_delay_description">Required for Always On Display transition</string>
   <string name="other_launcher">Hide icon in launcher</string>
   <string name="other_launcher_description">Settings will only be accessible in your system\'s live wallpaper picker</string>
   <string name="other_launcher_unsupported">This feature is no longer supported due to system restrictions</string>
