@@ -3,6 +3,7 @@
 - New: zoom-in effect for lockscreen instead of zoom-out (can be switched in size section)
 - New: separate swipe and tilt effect intensity controls
 - New: interval selection for random wallpaper design option
+- New: screen-off delay for Always On Display transition in "Other options" section
 - Improved: Android 11 system zoom option removed as the integrated zoom effect is no longer jerky when tilt effect is enabled
 - Improved: workaround for Samsung's implementation of dynamic colors
 - Improved: 2-ring support for 24H clock in daily random time selection
